responsive tab mobile ( still needs functionality)

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -42,6 +42,8 @@ head .logo_img{
 @import './all-files-sass/shop/shopp';
 @import './all-files-sass/shop/section-one';
 @import './all-files-sass/shop/section-two';
+@import './responsive';
+
 
 
 // @import './all-files-sass/hospitals/nav';
