--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -416,6 +416,18 @@
         position: unset;
         width: auto;
     }
+    .mobileapp .beni .sides .left .m-search{
+        align-items: center;
+    }
+    .view-all-m{
+        margin: 28px auto;
+    }
+    .emergency .heading .h-con h1{
+        padding-left: 8px;
+    }
+    .search-contain .search-items .search-container {
+        width: 290px;
+    }
 
 }
 
