--- a/scss/all-files-sass/ambulances/_ambulance.scss
+++ b/scss/all-files-sass/ambulances/_ambulance.scss
@@ -101,3 +101,8 @@
         margin: 64px auto;
     }
 }
+
+.head-back .head, .head-back .best {
+    background: rgba(0, 0, 0, 0.3);
+    padding: 10px;
+}
