--- a/css/style.css
+++ b/css/style.css
@@ -1161,9 +1161,6 @@ p {
     margin: 0;
     padding: 0 20px;
   }
-  .emergency .view-all-m {
-    margin: 0;
-  }
   .emergency .heading {
     margin-top: 37px;
   }
@@ -2593,6 +2590,11 @@ body {
   margin: 64px auto;
 }
 
+.head-back .head, .head-back .best {
+  background: rgba(0, 0, 0, 0.3);
+  padding: 10px;
+}
+
 .amb-container {
   width: 389px;
   background: #FFFFFF;
@@ -3843,6 +3845,18 @@ body {
   .serve .img {
     position: unset;
     width: auto;
+  }
+  .mobileapp .beni .sides .left .m-search {
+    align-items: center;
+  }
+  .view-all-m {
+    margin: 28px auto;
+  }
+  .emergency .heading .h-con h1 {
+    padding-left: 8px;
+  }
+  .search-contain .search-items .search-container {
+    width: 290px;
   }
 }
 
