--- a/scss/Media-Q/_mservice.scss
+++ b/scss/Media-Q/_mservice.scss
@@ -139,7 +139,7 @@
         margin: 0;
         padding: 0 20px;
         .view-all-m{
-            margin: 0;
+            // margin: 0;
         }    
         .heading{
             margin-top: 37px;
