--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -428,6 +428,9 @@
     .search-contain .search-items .search-container {
         width: 290px;
     }
+    .advice .right {
+        width: 100%;
+    }
 
 }
 
