--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,3 +1,8 @@
+.active{
+    color: #078FF7;
+    text-decoration: underline;
+}
+
 @media screen and (max-width:992px) {
     .serve .service h1 {
         font-weight: 700;
@@ -458,4 +463,7 @@
     }
 
 }
+
+
+
 
